# django_utils

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
blk_soft_utils/admin/: __init__.py  base_admin.py
blk_soft_utils/models/: __init__.py  base_audit.py
django_utils/admin/: __init__.py
django_utils/models/: __init__.py  base_audit_log.py
tools/admin/: __init__.py
tools/models/: __init__.py
