# do NOT CHANGE version. Change from pyproject.toml
[metadata]
name = django_utils
version = 0.0.0
description = BlkSoft Django Utils
long_description = file: README.md
author = DevOps
author_email = devops@crehana.com
license = BSD-3-Clause  # Example license
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
include_package_data = true
packages = find:
